messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: messaging-app
      env: blue
  template:
    metadata:
      labels:
        app: messaging-app
        env: blue
    spec:
      containers:
      - name: messaging-app
        image: messaging-app:blue
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
