messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-service-green
spec:
  selector:
    app: messaging-app
    env: green
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
