messaging_app/messaging-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-service
spec:
  selector:
    app: messaging-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
