messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messaging-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: messaging.local
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: messaging-app-service
                port:
                  number: 8080
